objects/Account/fields/Games_Played__c.field-meta.xml
<CustomField>
    <fullName>Games_Played__c</fullName>
    <description>The total number of games played.</description>
    <formula>Wins__c + Loss__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Games Played</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>