objects/Account/fields/Loss__c.field-meta.xml
<CustomField>
    <fullName>Loss__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of team losses</description>
    <label>Loss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>