objects/Account/fields/Points_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Points_Allowed__c</fullName>
    <description>Average number of points allowed each game.</description>
    <label>Points Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>