objects/Account/fields/Points_Per_Game__c.field-meta.xml
<CustomField>
    <fullName>Points_Per_Game__c</fullName>
    <description>Average number of points scored each game.</description>
    <label>Points Per Game</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>