objects/Account/fields/Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Win_Percentage__c</fullName>
    <description>Percent of games won.</description>
    <formula>IF(Games_Played__c &gt; 0, Wins__c/Games_Played__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>