objects/Account/fields/Wins__c.field-meta.xml
<CustomField>
    <fullName>Wins__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of wins for this team</description>
    <label>Wins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>